--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -13,3 +13,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+img {
+  width: 50%;
+  height: 75%;
+}
